- Archaeology Workbench Now Has Books On Front And Back
- Ancient Shovel Now Has 1/5 Chance Of Doubling Valid Drop
- Ancient Pickaxe Now Has 1/5 Chance Of Dropping A Jewel (Data-Driven)
- Ancient Axe Now Has 1/5 Chance Of "Crafting" A Drop (Data-Driven)
- Ancient Hoe Now Can Left-Click On Crops To Harvest, Doubling Yield
- Cultivator Fuels Now Data-Driven
- Archaeology Table Fuels Now Data-Driven
- Added Calamites Saplings Now Made From Calamites DNA
- Added Lepidodendron Saplings Now Made From Lepidodendron DNA
- Added Sigillaria Now Made From Sigillaria DNA
- Added Jurassic Fern Spores Now Made From Jurassic Fern DNA
- Added Calamites DNA
- Added Lepidodendron DNA
- Added Sigillaria DNA
- Added Jurassic Fern DNA
- Added "Interactions with Analyzer" Statistic
- Added "Interactions with Archaeology Workbench" Statistic
- Added "Interactions with Cultivator" Statistic
- Added "Interactions with Feeder" Statistic
- Added "Interactions with Gene Modification Table" Statistic
- Added "Interactions with Palaeontology Table" Statistic
- Added JEI For Archaeology Table Fuels
- Fixed And Updated Legacy Textures
- Fixed Incorrect Jurassic Fern Texture
- Fixed Dimetrodon DNA Texture
- (Fabric) Fixed Transparent Textures
- (Fabric) Fixed Palaeontology Screen
- Fixed Dinosaur-Related Crash
- Fixed Fossil Shadows
- Fixed Untranslated String In Time Machine
- Fixed Some Item's Statistics Not Working
- Fixed Bucket of Raw Berry Medley Not Working As Cultivator Fuel
- Fixed Ankylosaurus Egg Not Working As Cultivator Fuel
- Fixed Carnotaurus Egg Not Working As Cultivator Fuel
- Fixed Compsognathus Egg Not Working As Cultivator Fuel
- Fixed Cryolophosaurus Egg Not Working As Cultivator Fuel
- Fixed Dimetrodon Egg Not Working As Cultivator Fuel
- Fixed Dodo Egg Not Working As Cultivator Fuel
- Fixed Gallimimus Egg Not Working As Cultivator Fuel
- Fixed Incubated Dodo Egg Not Working As Cultivator Fuel
- Fixed Incubated Moa Egg Not Working As Cultivator Fuel