@@ -1,6 +1,7 @@
 {
   "values": [
     "fossilslegacy:scarab_gem_sword",
-    "fossilslegacy:ancient_sword"
+    "fossilslegacy:ancient_sword",
+    "fossilslegacy:therizinosaurus_claws"
   ]
 }
