@@ -1,0 +1,91 @@
+{
+	"credit": "Made with Blockbench",
+	"texture_size": [32, 32],
+	"textures": {
+		"0": "fossilslegacy:item/therizinosaurus_claws_model",
+		"particle": "fossilslegacy:item/therizinosaurus_claws_model"
+	},
+	"elements": [
+		{
+			"from": [7, 0, 7],
+			"to": [9, 10, 9],
+			"rotation": {"angle": 0, "axis": "y", "origin": [7, 0, 7]},
+			"faces": {
+				"north": {"uv": [0, 0, 1, 5], "texture": "#0"},
+				"east": {"uv": [1, 0, 2, 5], "texture": "#0"},
+				"south": {"uv": [2, 0, 3, 5], "texture": "#0"},
+				"west": {"uv": [3, 0, 4, 5], "texture": "#0"},
+				"up": {"uv": [7, 1, 6, 0], "texture": "#0"},
+				"down": {"uv": [7, 1, 6, 2], "texture": "#0"}
+			}
+		},
+		{
+			"from": [9, 3, 7],
+			"to": [11, 11, 9],
+			"rotation": {"angle": 22.5, "axis": "z", "origin": [10, 11, 8]},
+			"faces": {
+				"north": {"uv": [4, 0, 5, 4], "texture": "#0"},
+				"east": {"uv": [4, 4, 5, 8], "texture": "#0"},
+				"south": {"uv": [0, 5, 1, 9], "texture": "#0"},
+				"west": {"uv": [5, 0, 6, 4], "texture": "#0"},
+				"up": {"uv": [7, 3, 6, 2], "texture": "#0"},
+				"down": {"uv": [7, 3, 6, 4], "texture": "#0"}
+			}
+		},
+		{
+			"from": [5, 3, 7],
+			"to": [7, 11, 9],
+			"rotation": {"angle": -22.5, "axis": "z", "origin": [6, 11, 8]},
+			"faces": {
+				"north": {"uv": [1, 5, 2, 9], "texture": "#0"},
+				"east": {"uv": [2, 5, 3, 9], "texture": "#0"},
+				"south": {"uv": [3, 5, 4, 9], "texture": "#0"},
+				"west": {"uv": [5, 4, 6, 8], "texture": "#0"},
+				"up": {"uv": [7, 5, 6, 4], "texture": "#0"},
+				"down": {"uv": [7, 5, 6, 6], "texture": "#0"}
+			}
+		},
+		{
+			"from": [5.5, 9, 8],
+			"to": [10.5, 13, 11],
+			"rotation": {"angle": 0, "axis": "y", "origin": [6.5, 9, 8]},
+			"faces": {
+				"north": {"uv": [1.5, 14, 4, 16], "texture": "#0"},
+				"east": {"uv": [0, 14, 1.5, 16], "texture": "#0"},
+				"south": {"uv": [5.5, 14, 8, 16], "texture": "#0"},
+				"west": {"uv": [4, 14, 5.5, 16], "texture": "#0"},
+				"up": {"uv": [1.5, 12.5, 4, 14], "texture": "#0"},
+				"down": {"uv": [1.5, 11, 4, 12.5], "texture": "#0"}
+			}
+		}
+	],
+	"display": {
+		"thirdperson_righthand": {
+			"rotation": [90, 0, 0],
+			"translation": [0, 0.5, -1.75]
+		},
+		"thirdperson_lefthand": {
+			"rotation": [90, 0, 0],
+			"translation": [0, 0.5, -1.75]
+		},
+		"firstperson_righthand": {
+			"rotation": [90, 0, 0],
+			"translation": [0, 0, 0.5]
+		},
+		"firstperson_lefthand": {
+			"rotation": [90, 0, 0],
+			"translation": [0, 0, 0.5]
+		},
+		"ground": {
+			"translation": [0, 2, 0],
+			"scale": [0.5, 0.5, 0.5]
+		},
+		"head": {
+			"rotation": [90, 0, 0],
+			"translation": [0, 7.5, -6.75]
+		},
+		"fixed": {
+			"rotation": [2, 1, 0]
+		}
+	}
+}
