@@ -8,7 +8,8 @@
   ],
   "client": [
     "client.GuiMixin",
-    "client.RenderTextureOverlayAccessor"
+    "client.RenderTextureOverlayAccessor",
+    "client.ModelManagerAccessor"
   ],
   "injectors": {
     "defaultRequire": 1
