@@ -1,0 +1,21 @@
+{
+  "loader": "neoforge:separate_transforms",
+  "base": {
+    "parent": "fossilslegacy:item/therizinosaurus_claws_in_hand"
+  },
+  "perspectives": {
+    "gui": {
+      "parent": "fossilslegacy:item/therizinosaurus_claws_gui"
+    },
+    "ground": {
+      "parent": "fossilslegacy:item/therizinosaurus_claws_gui"
+    },
+    "fixed": {
+      "parent": "fossilslegacy:item/therizinosaurus_claws_gui"
+    }
+  },
+  "textures": {
+    "particle": "fossilslegacy:item/therizinosaurus_claws"
+  },
+  "gui_light": "front"
+}
